# AfriChain-tidb

./: .env.tidb  .gitignore  .pre-commit-config.yaml  DEPLOYMENT_GUIDE.md  Dockerfile  HACKATHON_SUBMISSION_SUMMARY.md  IMMEDIATE_SUBMISSION_CHECKLIST.md  README.md  README_HACKATHON.md  SUBMISSION_PACKAGE.md  deploy-to-do.sh  docker-compose.yml  fallback_llm.py  main.tsx  main_tidb.py  package-lock.json  package.json  pyproject.toml  railway.toml  railway.yml  render.yaml  requirements.txt  setup_tidb_schema.py  vercel.json  vite.config.ts
.bmad-core/: install-manifest.yaml  working-in-the-brownfield.md
.bmad-core/agents/: analyst.md  architect.md  bmad-orchestrator.md  pm.md  po.md  ux-expert.md
.bmad-core/checklists/: architect-checklist.md  pm-checklist.md  po-master-checklist.md
.bmad-core/data/: bmad-kb.md
.bmad-core/tasks/: create-deep-research-prompt.md  document-project.md  execute-checklist.md  facilitate-brainstorming-session.md  index-docs.md  kb-mode-interaction.md
.bmad-core/templates/: prd-tmpl.yaml  (+6 more)
.do/: app.yaml
api/: dashboard.py  index.py
database/: main_tidb.py
deployment/: IMMEDIATE_SUBMISSION_CHECKLIST.md  Procfile
development/: requirements-dev.txt
docs/: 2-target-users.md  3-key-features.md  4-user-interface-design-goals.md  5-success-metrics.md
documentation/: architecture.md  detailed-user-stories.md  epics-and-stories.md
frontend/: App.verichainx.tsx  index.html  theme.ts
hedera-service/: .env.example  jest.config.js  package.json
migrations/: 001_initial_schema.sql
src/: index.css
stories/: 1.2.multi-agent-framework.md  3.1.llm-authenticity-agent.md  5.1.admin-dashboard-ui.md
verichainX/: .env.example  DEPLOYMENT.md  docker-compose.yml  fallback_llm.py  frontend-vercel.json  main_tidb.py  vercel-frontend.json  vercel.json
(+427 files in other folders)
