[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "counterfeit-detection"
version = "1.0.0"
description = "Counterfeit Product Detection & Supply Chain Intelligence System"
authors = [{name = "Counterfeit Detection Team"}]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "sqlalchemy==2.0.23",
    "redis==5.0.1",
    "openai==1.3.7",
    "anthropic==0.7.8",
    "sentence-transformers==2.2.2",
    "pydantic==2.0.5",
    "pydantic-settings==2.1.0",
    "python-dotenv==1.0.0",
    "aiomysql==0.2.0",
    "cryptography==41.0.7",
    "httpx==0.25.2",
    "python-multipart==0.0.6",
    "structlog==23.2.0",
    "slowapi==0.1.9"
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.3",
    "pytest-asyncio==0.21.1",
    "pytest-cov==4.1.0",
    "black==23.11.0",
    "isort==5.12.0",
    "flake8==6.1.0",
    "mypy==1.7.1",
    "pre-commit==3.6.0"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--cov=src/counterfeit_detection --cov-report=html --cov-report=term-missing"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["counterfeit_detection"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true